--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+svg {
+  shapre-rendering: crispEdges;
+}
+
+.centered {
+  text-align: center;
+}
+
 :root {
   --oHist-color: #fb9a99;
   --dHist-color: #33a02c;
