--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ body {
   left: 0;
 }
 
+#app-img {
+  width: 1280px;
+  height: 720px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 #video-overlay {
   position: absolute;
   top: 0;
@@ -24,7 +32,17 @@ body {
   left: 0;
   z-index: 20;
   pointer-events: none;
-  fill-opacity: 0.50;
+  fill-opacity: 0.5;
+  stroke-opacity: 0;
+}
+
+#aoi, #datacoverage, #as {
+  stroke-opacity: 0.1;
+  stroke-color: #000;
+}
+
+#timeControl .chart rect {
+  stroke-width: 0;
 }
 
 svg {
@@ -42,8 +60,6 @@ svg {
   --table-color: #1f78b4;
   --offices-color: #a6cee3;
   --info-color: #e31a1c;
-  --stroke-color: #000000;
-  --stroke-opacity: 0.1;
   --officesCleared-color: #1676B6;
   --officeMouseEnter-color: #ADC6EA;
   --officeClicked-color: #FF7F00;
@@ -65,162 +81,133 @@ svg {
 .info, .info * {
   fill: var(--info-color);
   background-color: var(--info-color);
-  stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
+  stroke: var(--info-color);
 }
 
 .overviewHist, .overviewHist * {
   fill: var(--oHist-color);
   background-color: var(--oHist-color);
-  stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
-}
-
-.overviewHist, .overviewHist * {
-  fill: var(--oHist-color);
-  background-color: var(--oHist-color);
-  stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
+  stroke: var(--oHist-color);
 }
 
 .detailHist, .detailHist * {
   fill: var(--dHist-color);
   background-color: var(--dHist-color);
-  stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
+  stroke: var(--dHist-color);
 }
 
 .graph, .graph * {
   fill: var(--graph-color);
   background-color: var(--graph-color);
-  stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
+  stroke: var(--graph-color);
 }
 
 .table, .table * {
   fill: var(--table-color);
   background-color: var(--table-color);
-  stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
+  stroke: var(--table-color);
 }
 
 .offices, .offices * {
   fill: var(--offices-color);
   background-color: var(--offices-color);
-  stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
+  stroke: var(--offices-color);
 }
 
 .officesCleared, .officesCleared * {
   fill: var(--officesCleared-color);
   background-color: var(--officesCleared-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .officeMouseEnter, .officeMouseEnter * {
   fill: var(--officeMouseEnter-color);
   background-color: var(--officeMouseEnter-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .officeClicked, .officeClicked * {
   fill: var(--officeClicked-color);
   background-color: var(--officeClicked-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .sliderMoved, .sliderMoved * {
   fill: var(--sliderMoved-color);
   background-color: var(--sliderMoved-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .mouseEnter, .mouseEnter * {
   fill: var(--mouseEnter-color);
   background-color: var(--mouseEnter-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .accessTimeClicked, .accessTimeClicked * {
   fill: var(--accessTimeClicked-color);
   background-color: var(--accessTimeClicked-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .histogramBrushStart, .histogramBrushStart * {
   fill: var(--histogramBrushStart-color);
   background-color: var(--histogramBrushStart-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .histogramBrushEnd, .histogramBrushEnd * {
   fill: var(--histogramBrushEnd-color);
   background-color: var(--histogramBrushEnd-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .headerClicked, .headerClicked * {
   fill: var(--headerClicked-color);
   background-color: var(--headerClicked-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .rowClicked, .rowClicked * {
   fill: var(--rowClicked-color);
   background-color: var(--rowClicked-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .rowMouseOver, .rowMouseOver * {
   fill: var(--rowMouseOver-color);
   background-color: var(--rowMouseOver-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .tableToggleSelected, .tableToggleSelected * {
   fill: var(--tableToggleSelected-color);
   background-color: var(--tableToggleSelected-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .pageChange, .pageChange * {
   fill: var(--pageChange-color);
   background-color: var(--pageChange-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .histogramBarClick, .histogramBarClick * {
   fill: var(--histogramBarClick-color);
   background-color: var(--histogramBarClick-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .histogramBarMouseEnter, .histogramBarMouseEnter * {
   fill: var(--histogramBarMouseEnter-color);
   background-color: var(--histogramBarMouseEnter-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .graphNodeMouseEnter, .graphNodeMouseEnter * {
   fill: var(--graphNodeMouseEnter-color);
   background-color: var(--graphNodeMouseEnter-color);
   stroke: var(--stroke-color);
-  stroke-opacity: var(--stroke-opacity);
 }
 
 .ribbons {
