--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.relative-container {
+  position: relative;
+}
+
 #user-video {
   width: 1280px;
   height: 720px;
@@ -11,13 +15,13 @@ body {
 }
 
 #app-context {
-  height: 340px;
+  height: 400px;
   position: relative;
 }
 
 #app-img {
   width: auto;
-  height: 340px;
+  height: 400px;
   position: absolute;
   top: 0;
   left: 0;
@@ -36,8 +40,30 @@ body {
   top: 0;
   left: 0;
   z-index: 20;
+  stroke-opacity: 0.8;
+  fill-opacity: 0;
+}
+
+#bbox-overlay rect:hover {
   fill-opacity: 0.5;
-  stroke-opacity: 0;
+}
+
+#brush-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#interaction-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 30;
+  pointer-events: none;
+}
+
+#brush-container .chart rect {
+  stroke-width: 0;
 }
 
 #aoi, #datacoverage, #as {
@@ -51,6 +77,10 @@ body {
 
 svg {
   shapre-rendering: crispEdges;
+}
+
+svg text {
+  pointer-events: none;
 }
 
 .centered {
