added pages for various vis

--- a/style.css
+++ b/style.css
@@ -6,6 +6,48 @@ body {
   position: relative;
 }
 
+.dd {
+  margin-top: 6px;
+  margin-right: 12px;
+  margin-bottom: 0;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #e7e7e7;
+    background-color: #f3f3f3;
+}
+
+li {
+    float: left;
+    margin-bottom: 0;
+}
+
+li a {
+    display: block;
+    color: #666;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #ddd;
+}
+
+li a.active {
+    color: white;
+    background-color: #0077BE;
+}
+
+#video-container {
+  margin: 0 auto;
+  width: 1280px;
+}
+
 #user-video {
   width: 1280px;
   height: 720px;
